# Edoras

./: .env.example  .gitignore  AGENTS.md  README.md  SYSTEM_REFERENCE.md  advanced_scorer.py  automated_portfolio_report.py  backtester.py  bootstrap_db.py  cli.py  compute_all_indicators.py  config.py  correlation_tracker.py  crypto_data_collector.py  daily_data_collection.py  daily_portfolio_report.py  daily_report_cron.sh  dex_data_collector.py  dex_executor.py  dex_risk_rules.py  dex_trading_agent.py  enhanced_optimizer.py  equity_data_collector.py  exit_signals.py  historical_backfill.py  intraday_update.py  live_executor.py  market_intelligence.py  paper_rebalancing.py  paper_trading.py  price_alerts.py  price_alerts_cron.sh  pyproject.toml  quick_market_scan.py  regime_monitor.py  report_engine.py  requirements.txt  research_reader.py  risk_guardian.py  risk_manager.py  (+22 more)
.claude/: settings.local.json
backtest/: RESULTS.md  __init__.py  catalogue.py  compare.py  deployer.py  engine.py  validation.py
config/: requirements.txt
docs/: ARCHITECTURE.md  CROSS_ASSET_PORTFOLIO_CHANGES.md  DATABASE.md  DEX.md  DEX_INTEGRATION_ARCHITECTURE.md  DEX_INTEGRATION_DIAGRAM.md  DEX_INTEGRATION_REQUIREMENTS.md  DOCUMENTATION.md  LLM_CONFIGURATION_SUMMARY.md  OPERATIONS.md  POLYMARKET.md  PORTFOLIO_MANAGEMENT_STRATEGY.md  ROADMAP.md  SCHEDULING_PLAN.md  STRATEGIES.md  SYSTEM_REFERENCE.md  TRADING_PHILOSOPHY.md  TRADING_RULES.md  architecture-diagram.md  bonsai_swarm_architecture.md  edoras_improvement_plan.md  edoras_issues_20260412.md  edoras_redesign_01.md  robustness_spec.md
(+186 files in other folders)
