[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edoras"
version = "0.2.0"
description = "Multi-asset trading system with backtested strategies and regime-adaptive routing"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "coinbase-advanced-py>=1.6",
    "yfinance>=0.2",
    "openai>=1.0",
    "anthropic>=0.30",
    "sqlite-vec>=0.1.6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "aiosqlite>=0.20",
    "websockets>=12.0",
    "matplotlib>=3.8",
    "hmmlearn>=0.3",
    "statsmodels>=0.14",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
edoras     = "cli.cli:main"
edoras-dashboard = "cli.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # long lines tolerated during migration
